# MicroLM

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: preprocess.py
demo/: app.py  server.py
eval/: humaneval.py  perplexity.py
finetuning/: __init__.py  dpo_dataset.py  dpo_loss.py  finetune.py  sft_dataset.py  sft_trainer.py
inference/: generate.py
model/: __init__.py  attention.py  config.py  feedforward.py  microlm.py  rmsnorm.py  rope.py  transformer_block.py
notebooks/: kaggle_train.ipynb
tests/: test_model.py
tokenizer/: __init__.py  bpe.py  train_tokenizer.py
training/: dataset.py  lr_scheduler.py  train.py  trainer.py
training/configs/: 125m_config.yaml  tiny_config.yaml
