[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "microlm"
version = "0.1.0"
description = "A GPT-style 125M language model built from scratch in PyTorch"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26",
    "tqdm>=4.66",
    "pyyaml>=6.0",
    "datasets>=2.17",          # HuggingFace datasets (for data download)
    "huggingface-hub>=0.21",   # model/dataset hub
    "wandb>=0.16",             # experiment tracking
    "fastapi>=0.109",          # inference server
    "uvicorn>=0.27",           # ASGI server
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "black>=24.0",
    "ruff>=0.3",
    "mypy>=1.8",
    "ipykernel>=6.29",
    "matplotlib>=3.8",
]
demo = [
    "gradio>=4.19",
]
flash = [
    # Install separately: pip install flash-attn --no-build-isolation
    # Requires CUDA GPU
]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
